<resources>

    <!--Teks splash screen-->
    <string name="app_name">ElibraryPetik</string>
    <string name="elibrary">PeTIK book</string>
    <string name="petik">Pesantren Teknologi Informasi dan Komunikasi</string>
    <string name="open_drawer">Open navigation drawer</string>
    <string name="close_drawer">Close navigation drawer</string>


    <!--Teks halaman login-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="akun">Belum punya akun? Daftar</string>
    <string name="login">Login</string>
    <string name="pw">Password</string>
    <string name="nim">Nim</string>
    <string name="descripsi">Silahkan login untuk melanjutkan</string>

    <!--Teks halaman register-->
    <string name="register">Daftar Akun</string>
    <string name="daftar">Daftar</string>
    <string name="done_akun">Sudah punya akun? Login</string>

    <!--Teks bottom nav-->
    <string name="home">Home</string>
    <string name="status">History</string>
    <string name="buku">Book</string>
    <string name="profile">Profile</string>

    <!--Teks menu drawer-->
    <string name="settings">Pengaturan</string>
    <string name="help">Bantuan</string>
    <string name="about">Tentang Aplikasi</string>
    <string name="logout">Logout</string>

    <!--Teks halaman home-->
    <string name="hi">Hi Aril, mau baca buku apa hari ini?</string>
    <string name="find">Cari judul buku, genre, penulis...</string>
    <string name="all">Semua</string>
    <string name="adventure">Petualangan</string>
    <string name="romance">Romantis</string>
    <string name="horor">Horor</string>
    <string name="history">Sejarah</string>
    <string name="rekomendasi">Rekomendasi</string>
    <string name="see_all">Lihat Semua</string>
    <string name="popular">Popular</string>

    <!--TEKS DRAWER HEADER-->
    <string name="name">Nama:</string>
    <string name="nimm">Nim:</string>
    <string name="judul_buku">Judul Buku</string>
    <string name="genre">Genre</string>
    <string name="desc">Descripsi</string>
    <string name="pinjam">Pinjam</string>

    <string name="close">Close</string>
    <string name="nama_user">Nama User</string>
    <string name="mahasantri_petik">Mahasantri PeTIK</string>
    <string name="terima_kasih">Terima Kasih!</string>
    <string name="buku_berhasil_dikembalikan_tepat_waktu_teruslah_membaca_untuk_memperluas_wawasan">Buku berhasil dikembalikan tepat waktu. Teruslah membaca untuk memperluas wawasan!</string>
    <string name="pinjam_buku_lain">Pinjam Buku Lain</string>
    <string name="kembali_ke_beranda">Kembali ke Beranda</string>
    <string name="petbook_digital_library">PeTbook Digital Library</string>
    <string name="sedang_dipinjam">Sedang Dipinjam</string>
    <string name="_0">0</string>

    <string name="selesai_dikembalikan">Selesai Dikembalikan</string>
    <string name="ringkasan_aktivitas">Ringkasan Aktivitas</string>
    <string name="menunggu_persetujuan">Menunggu Persetujuan</string>
    <string name="tampilan">Tampilan</string>
    <string name="mode_gelap">Mode Gelap</string>
    <string name="ganti_tema_aplikasi_menjadi_ngelap_atau_terang">Ganti tema aplikasi menjadi \ngelap atau terang</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="atur_pengingat_dan_promosi_naplikasi">Atur pengingat dan promosi \naplikasi.</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="user">User</string>
    <string name="mahasantri">Mahasantri</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="rp_0">Rp 0</string>
    <string name="koleksi_amp_aktivitas"><![CDATA[Koleksi & Aktivitas]]></string>
    <string name="nomor_whatsapp">Nomor WhatsApp</string>
    <string name="username">Username</string>
    <string name="hai_mau_baca_apa_hari_ini">Hai, Mau baca apa hari ini?</string>
    <string name="literasi_tanpa_batas">Literasi tanpa batas.</string>
    <string name="lihat_semua">Lihat Semua</string>
    <string name="paling_populer">Paling Populer</string>
    <string name="buku_tidak_ditemukan">Buku tidak ditemukan</string>
    <string name="tidak_ada_buku_yang_cocok_dengan_pencarian_atau_kategori_ini">Tidak ada buku yang cocok dengan pencarian atau kategori ini</string>
    <string name="riwayat_aktivitas">Riwayat Aktivitas</string>
    <string name="pantau_semua_peminjaman_buku_kamu">Pantau semua peminjaman buku kamu</string>
    <string name="semua">Semua</string>
    <string name="pending">Pending</string>
    <string name="dipinjam">Dipinjam</string>
    <string name="dikembalikan">Dikembalikan</string>
    <string name="akun_amp_aplikasi"><![CDATA[Akun & Aplikasi]]></string>
    <string name="belum_ada_riwayat">Belum Ada Riwayat</string>
    <string name="faq">FAQ</string>
    <string name="bagaimana_cara_meminjam_buku">Bagaimana cara meminjam buku?</string>
    <string name="berapa_lama_waktu_peminjaman">Berapa lama waktu peminjaman?</string>
    <string name="info_status_peminjaman">Info status peminjaman</string>
    <string name="bagaimana_cara_mengembalikan_buku">Bagaimana cara mengembalikan buku?</string>
    <string name="apakah_ada_denda_keterlambatan">Apakah ada denda keterlambatan?</string>
    <string name="apa_yang_terjadi_jika_buku_hilang">Apa yang terjadi jika buku hilang?</string>
    <string name="apakah_bisa_memperpanjang_masa_pinjam">Apakah bisa memperpanjang masa pinjam?</string>
    <string name="apa_yang_terjadi_password_lupa">Apa yang terjadi password lupa?</string>
    <string name="judul_pertanyaan">Judul Pertanyaan</string>
    <string name="ini_adalah_isi_jawaban_dari_pertanyaan_yang_diklik_penjelasan_akan_muncul_di_sini_secara_detail_agar_pengguna_memahami_informasi_yang_diberikan">Ini adalah isi jawaban dari pertanyaan yang diklik. Penjelasan akan muncul di sini secara detail agar pengguna memahami informasi yang diberikan.</string>
    <string name="ubah_foto_profil">Ubah Foto Profil</string>
    <string name="informasi_pribadi">Informasi Pribadi</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="pilih_jurusan">Pilih Jurusan</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="no_whatsapp">No. WhatsApp</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="konfirmasi_pinjaman">Konfirmasi Pinjaman</string>
    <string name="pastikan_detail_peminjaman_sudah_sesuai">Pastikan detail peminjaman sudah sesuai</string>
    <string name="nama_penulis">Nama Penulis</string>
    <string name="atur_jadwal">Atur Jadwal</string>
    <string name="mulai_pinjam">Mulai Pinjam</string>
    <string name="durasi_peminjaman">Durasi Peminjaman</string>
    <string name="ringkasan_pengembalian">Ringkasan Pengembalian</string>
    <string name="dikembalikan_pada">Dikembalikan pada</string>
    <string name="l">-</string>
    <string name="konfirmasi_peminjaman">Konfirmasi Peminjaman</string>
    <string name="tgl_terbit">Tgl Terbit</string>
    <string name="stok">Stok</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="penerbit">Penerbit</string>
    <string name="pinjam_buku">PINJAM BUKU</string>
    <string name="diperpanjang">DIPERPANJANG</string>
    <string name="detail_peminjaman">Detail Peminjaman</string>
    <string name="tgl_pinjam">Tgl Pinjam</string>
    <string name="jatuh_tempo">Jatuh Tempo</string>
    <string name="status_aktif">Status: Aktif</string>
    <string name="bagaimana_cara_mengembalikan_buku1">Bagaimana cara mengembalikan buku?</string>
    <string name="total_kewajiban_denda">Total Kewajiban Denda</string>
    <string name="rincian_denda">Rincian Denda</string>
    <string name="_0_buku">0 Buku</string>
    <string name="katalog_buku">Katalog Buku</string>
    <string name="jelajahi_semua_buku">Jelajahi semua buku</string>
    <string name="menampilkan_semua_koleksi">Menampilkan semua koleksi</string>


    <string name="petbook">PeTIK Book</string>
    <string name="versi_1_0_0">Versi 1.0.0</string>
    <string name="tentang_aplikasi">Tentang Aplikasi</string>
    <string name="petbook_adalah_platform_perpustakaan_digital_modern_yang_memudahkan_santri_dalam_mencari_meminjam_dan_mengelola_koleksi_buku_secara_digital_di_lingkungan_pesantren_petik">PeTIK book adalah platform perpustakaan digital modern yang memudahkan santri dalam mencari, meminjam, dan mengelola koleksi buku secara digital di lingkungan Pesantren PeTIK.</string>
    <string name="dikembangkan_oleh">Dikembangkan oleh</string>
    <string name="pesantren_petik">Pesantren PeTIK</string>


    <string name="password_lama">Password Lama</string>
    <string name="masukkan_password_saat_ini">Masukkan password saat ini</string>
    <string name="password_baru">Password Baru</string>
    <string name="masukkan_password_baru">Masukkan password baru</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="pesantren_teknologi_informasi_dan_komunikasi">Pesantren Teknologi Informasi dan Komunikasi</string>
    <string name="digital_library">DIGITAL LIBRARY</string>

    <string-array name="period_options">
        <item>Harian</item>
        <item>Bulanan</item>
        <item>Tahunan</item>
    </string-array>

</resources>