<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pengaturan"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

        <item
            android:id="@+id/nav_bantuan"
            android:icon="@drawable/ic_help"
            android:title="@string/help"/>

        <item
            android:id="@+id/nav_tentang"
            android:icon="@drawable/ic_info"
            android:title="@string/about"/>
    </group>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>