<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="24dp"
    tools:context=".ui.auth.LoginFragment">


    <!--APP NAME-->
    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/elibrary"
        android:textColor="@color/text_primary"
        android:textSize="24sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="65dp"/>

    <!--SUBTITLE-->
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripsi"
        android:textSize="14sp"
        android:textColor="@color/text_secondary"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintTop_toBottomOf="@id/tv_judul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!--USERNAME (Ganti dari NIM)-->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Username"
        app:layout_constraintTop_toBottomOf="@id/tv_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="35dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"/>

    </com.google.android.material.textfield.TextInputLayout>


    <!--PASSWORD-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
        android:id="@+id/tilPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/pw"
        app:endIconMode="password_toggle"
        app:passwordToggleDrawable="@drawable/ic_password_eye_selector" 
        app:endIconTint="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/til_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="14sp"
            android:fontFamily="@font/roboto_regular"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--Button login-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="15sp"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/white"
        android:backgroundTint="@color/accent_blue"
        app:cornerRadius="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tilPassword"
        android:layout_marginTop="28dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
